<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="125dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/break_"
            android:textColor="#FF9800"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/zone"
            android:textColor="#fff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/email3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/inputemail3"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/et_style"
        android:gravity="center"
        android:hint="@string/sonilalto_gmail_com"
        android:textColorHint="@color/grey"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/password3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/inputpassword3"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/et_style"
        android:gravity="center"
        android:hint="@string/passwrd"
        android:textColorHint="@color/grey"
        android:fontFamily="sans-serif-smallcaps"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:maxLength="12"/>

    <Button
        android:id="@+id/loginbutton3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginStart="120dp"
        android:backgroundTint="@color/grey"
        android:text="@string/log_inbtn"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/white"> </Button>

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="530dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="15sp" />

    <Button
        android:id="@+id/viewbtn3"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="570dp"
        android:layout_marginStart="170dp"
        android:backgroundTint="@color/grey"
        android:text="@string/view"
        android:textSize="10sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/white"/>

</RelativeLayout>