<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:padding="40dp"
    tools:context=".CheckoutActivity">

    <LinearLayout
        android:id="@+id/payment_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/checkout_options"
            android:textColor="#FF9800"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/options"
            android:textColor="#fff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/forstall1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_options"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/for_stall_1"
        android:textAlignment="viewEnd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gcashtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forstall1"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/g_cash"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/dashes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gcashtext"
        android:textColor="@color/dark_blue"
        android:text="@string/dash"/>

    <LinearLayout
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dashes">

        <TextView
            android:id="@+id/gcashnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="75dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/_63_9235369100"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/copylogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_content_copy_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/info1"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textColor="@color/red"
        android:layout_below="@id/number"/>

    <Button
        android:id="@+id/confirmation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_used_of_g_cash"
        android:background="@drawable/btn_style"
        android:layout_below="@id/info1"/>

    <TextView
        android:id="@+id/dasheswithor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/confirmation"
        android:textColor="@color/dark_blue"
        android:text="@string/dasheswithor"/>

    <Button
        android:id="@+id/reservatiobtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="95dp"
        android:background="@drawable/btn_style"
        android:text="@string/reserve_for_me"
        android:layout_below="@id/dasheswithor"/>

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/info1"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textColor="@color/red"
        android:layout_below="@id/reservatiobtn"/>

</RelativeLayout>