<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".SecActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="125dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/break_"
            android:textColor="#FF9800"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/zone"
            android:textColor="#fff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/SigninAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:text="@string/sign_in_as"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:fontFamily="sans-serif-smallcaps"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/ascustomerbtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style"
            android:text="@string/customer"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="25sp" />

        <Button
            android:id="@+id/assellerbtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_style"
            android:text="@string/seller"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="25sp" />
    </LinearLayout>
</RelativeLayout>