<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".SignUpMainActivity">

    <TextView
        android:id="@+id/texoptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/choose_your_store"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"/>

    <Button
        android:id="@+id/stall1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="129dp"
        android:background="@drawable/btn_style2"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/stall_1"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/stall2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="129dp"
        android:background="@drawable/btn_style2"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/stall_2"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/stall3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="129dp"
        android:background="@drawable/btn_style2"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/stall_3"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>