<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TandCactivity2">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/terms_and_conditionspage"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/subheading"
                android:fontFamily="sans-serif-smallcaps"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="10sp"
                android:text="@string/content"
                android:fontFamily="sans-serif-smallcaps"
                android:justificationMode="inter_word"/>

            <Button
                android:id="@+id/agreement"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_marginStart="320dp"
                android:backgroundTint="@color/black"
                android:text="@string/i_agree"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="sans-serif-smallcaps"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>